[package]
name = "tinytsx-runtime-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tinytsx-runtime-bootstrap"
path = "src/main.rs"

[features]
generated = []

[dependencies]
serde_json = "=1.0.150"
tinytsx-runtime-sqlite = { path = "../sqlite" }
tinytsx-runtime-worker = { path = "../worker" }
