[package]
name = "tinytsx-runtime-bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "tinytsx-runtime-bootstrap"
path = "src/main.rs"

[features]
default = ["application", "filesystem", "network"]
generated = []
allocation-metrics = []
application = ["dep:tinytsx-runtime-sqlite", "network"]
filesystem = []
network = []

[dependencies]
libc = "=0.2.186"
serde_json = "=1.0.150"
tinytsx-runtime-sqlite = { path = "../sqlite", optional = true }
tinytsx-runtime-worker = { path = "../worker" }
